typescript/checker/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts.stderr
error: TS2309 {
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            11,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts:1:1
  |
1 | export = B;
  | ^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            9,
        ),
        hi: BytePos(
            10,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts:1:10
  |
1 | export = B;
  |          ^

